version/stable/_sources/api/ansys/mechanical/stubs/v242/Ansys/ACT/Automation/Mechanical/FE/CDB/TBDataValues.rst.txt
.. vale off



:class:`TBDataValues`
=====================

.. py:class:: ansys.mechanical.stubs.v242.Ansys.ACT.Automation.Mechanical.FE.CDB.TBDataValues(iTbDataValues: Ansys.Common.Interop.FEParsePlugin_ANSYS.ITBDataValues)

   Bases: :py:obj:`object`


   
   Represents data for a given temperature.
















   ..
       !! processed by numpydoc !!


.. py:currentmodule:: TBDataValues

Overview
--------

.. tab-set::




   .. tab-item:: Properties

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~Temp`
            - Gets the temperature.
          * - :py:attr:`~ValueCount`
            - Gets the number of values.
          * - :py:attr:`~Values`
            - Gets the values.







Property detail
---------------
.. py:property:: Temp
   :type: Optional[float]


   
   Gets the temperature.
















   ..
       !! processed by numpydoc !!

.. py:property:: ValueCount
   :type: Optional[int]


   
   Gets the number of values.
















   ..
       !! processed by numpydoc !!

.. py:property:: Values
   :type: Optional[tuple[float]]


   
   Gets the values.
















   ..
       !! processed by numpydoc !!







.. vale on